--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simulador</title>
 </head>
 <body style="margin: 0%;">
-    <embed src="PRUEBA.pdf" type="application/pdf" width="100%" height="700"/>
+    <embed src="Deber N1.pdf" type="application/pdf" width="100%" height="700"/>
 </body>
 
 
